<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink"
    tools:context=".HomeActivity">

    <TextView
        android:padding="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <Button
        android:onClick="showTuto"
        android:background="@drawable/rounded_bouton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home_tuto"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:onClick="showProfil"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_bouton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home_profil"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:onClick="showRemarques"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_bouton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home_remarque"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_bouton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home_retour"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</LinearLayout>